2012-02-13 Josef Cacek
  * symbolic link to /Applications added to Mac OS X .dmg package

2012-02-10 Josef Cacek (1.2.7 test)
  * Updated Java runtime for Windows (6u30)
  * Mac OS X test support (dmg)

2012-02-05 Josef Cacek
  * wildcard (*,?) support in PDF names when using batch signing
  * updated Apache commons libraries (commons-lang3-3.1, commons-io-2.1)

2012-02-04 Josef Cacek (1.2.6)
  * fixed bug in handling CLI option "-pr DISALLOW_PRINTING" (c.f. https://sourceforge.net/projects/jsignpdf/forums/forum/782217/topic/4925360)
  * IOUtils class removed from jsignpdf packages - commons-io version is used instead

2011-12-13 Josef Cacek (1.2.5)
  * fixed problem with removing existing signatures (when PDF page dictionary is missing)

2011-12-02 Josef Cacek (1.2.4)
  * add non-zero exit codes to SignatureCounter for error cases:
    EXIT_CODE_PARSE_ERR = 1 (command line in a wrong format)
    EXIT_CODE_CANT_READ_FILE = 5 (unable to read the file from given path)
    EXIT_CODE_COMMON_ERROR = 6 (counting signatures in the PDF failed)
  * new SignatureCounter parameter --names (prints signatures names instead of signatures count)
  * added sections about command-line tools to documentation - Verifier and SignatureCounter (including exit codes) 
  
2011-11-28 Aleksandar Stojsavljevic
  * Verifier: If certificate is successfully validated against CRL - don't set warning flag for OCSP

2011-11-23 Josef Cacek
  * if PDF version update is not possible, show eror message and don't sign 
  * print stacktrace if PKCS11 provider initialization fails

2011-11-18 Josef Cacek (1.2.3)
  * fix CLI - the "append mode" for signatures was used always

2011-11-16 Josef Cacek (1.2.2)
  * exit codes improved in CLI
    EXIT_CODE_PARSE_ERR = 1 (command line in a wrong format)
    EXIT_CODE_NO_COMMAND = 2 (nothing to do - e.g. no file for signing provided)
    EXIT_CODE_SOME_SIG_FAILED = 3 (signing of some - but not all - files failed) 