@@ -96,9 +96,6 @@ public class SignPdfForm extends javax.swing.JFrame implements SignResultListene
     cbPrinting.setModel(new DefaultComboBoxModel(PrintRight.values()));
 
     updateFromOptions();
-
-    chkbAdvancedActionPerformed(null);
-    chkbPdfEncryptedActionPerformed(null);
   }
 
   /**
@@ -201,9 +198,7 @@ public class SignPdfForm extends javax.swing.JFrame implements SignResultListene
 
     chkbVisibleSig.setSelected(options.isVisible());
 
-    switchAdvancedView(options.isAdvanced());
-    switchEncryptedPdf(options.isEncrypted());
-    switchVisibleSignature(options.isVisible());
+    refreshView();
     pack();
   }
 
@@ -245,54 +240,66 @@ public class SignPdfForm extends javax.swing.JFrame implements SignResultListene
   }
 
   /**
-   * Handles switching Advanced checkbox. Sets some components visible/hidden
-   * depending on given status flag.
-   * 
-   * @param anAdvanced
-   *          flag - advanced view is enabled
+   * Handles visibility of components depending on options settings .
    */
-  private void switchAdvancedView(boolean anAdvanced) {
-    btnLoadAliases.setVisible(anAdvanced);
-    lblAlias.setVisible(anAdvanced);
-    cbAlias.setVisible(anAdvanced);
-    lblKeyPwd.setVisible(anAdvanced);
-    pfKeyPwd.setVisible(anAdvanced);
-    chkbPdfEncrypted.setVisible(anAdvanced);
-    lblCertLevel.setVisible(anAdvanced);
-    cbCertLevel.setVisible(anAdvanced);
-    lblHashAlgorithm.setVisible(anAdvanced);
-    cbHashAlgorithm.setVisible(anAdvanced);
-    chkbAppendSignature.setVisible(anAdvanced);
-    btnTsaOcsp.setVisible(anAdvanced);
-  }
+  private void refreshView() {
+    boolean advanced = chkbAdvanced.isSelected();
+    boolean visibleSignature = chkbVisibleSig.isSelected();
+    boolean keystoreFileVisible = true;
+    boolean keystorePwdVisible = true;
+    boolean keyPwdVisible = advanced;
+    boolean storePwdVisible = true;
+    boolean encryptionEnabled = chkbAdvanced.isSelected() && chkbPdfEncrypted.isSelected();
 
-  /**
-   * Handles switching Visible signature checkbox. Sets button Settings
-   * enabled/disabled
-   * 
-   * @param anVisible
-   *          flag - visible signature is enabled
-   */
-  private void switchVisibleSignature(boolean anVisible) {
-    btnVisibleSigSettings.setEnabled(anVisible);
-  }
+    final String selectedType = (String) cbKeystoreType.getSelectedItem();
+    if (StringUtils.equals(Constants.KEYSTORE_TYPE_WINDOWS_MY, selectedType)) {
+      keystoreFileVisible = false;
+      keystorePwdVisible = false;
+      keyPwdVisible = false;
+      storePwdVisible = advanced;
+    }
 
-  /**
-   * Handles switching Encrypted checkbox. Sets some components enabled/disabled
-   * depending on given status flag.
-   * 
-   * @param anEnabled
-   *          flag - encrypted view is enabled
-   */
-  private void switchEncryptedPdf(boolean anEnabled) {
-    final boolean tmpEncrypted = chkbAdvanced.isSelected() && anEnabled;
-    lblPdfOwnerPwd.setVisible(tmpEncrypted);
-    pfPdfOwnerPwd.setVisible(tmpEncrypted);
-    lblPdfUserPwd.setVisible(tmpEncrypted);
-    pfPdfUserPwd.setVisible(tmpEncrypted);
-    btnRights.setVisible(tmpEncrypted);
+    btnLoadAliases.setVisible(advanced);
+    lblAlias.setVisible(advanced);
+    cbAlias.setVisible(advanced);
 
-    chkbAppendSignature.setEnabled(!anEnabled);
+    chkbPdfEncrypted.setVisible(advanced);
+
+    lblCertLevel.setVisible(advanced);
+    cbCertLevel.setVisible(advanced);
+
+    lblHashAlgorithm.setVisible(advanced);
+    cbHashAlgorithm.setVisible(advanced);
+
+    chkbAppendSignature.setEnabled(!encryptionEnabled);
+    chkbAppendSignature.setVisible(advanced);
+    if (encryptionEnabled) {
+      chkbAppendSignature.setSelected(false);
+    }
+
+    btnTsaOcsp.setVisible(advanced);
+
+    lblKeystoreFile.setVisible(keystoreFileVisible);
+    tfKeystoreFile.setVisible(keystoreFileVisible);
+    btnKeystoreFile.setVisible(keystoreFileVisible);
+
+    lblKeystorePwd.setVisible(keystorePwdVisible);
+    pfKeystorePwd.setVisible(keystorePwdVisible);
+
+    lblKeyPwd.setVisible(keyPwdVisible);
+    pfKeyPwd.setVisible(keyPwdVisible);
+
+    lblPdfOwnerPwd.setVisible(encryptionEnabled);
+    pfPdfOwnerPwd.setVisible(encryptionEnabled);
+
+    lblPdfUserPwd.setVisible(encryptionEnabled);
+    pfPdfUserPwd.setVisible(encryptionEnabled);
+
+    btnRights.setVisible(encryptionEnabled);
+
+    chkbStorePwd.setVisible(storePwdVisible);
+
+    btnVisibleSigSettings.setEnabled(visibleSignature);
   }
 
   /**
@@ -314,8 +321,6 @@ public class SignPdfForm extends javax.swing.JFrame implements SignResultListene
    * WARNING: Do NOT modify this code. The content of this method is always
    * regenerated by the Form Editor.
    */
-  // <editor-fold defaultstate="collapsed"
-  // <editor-fold defaultstate="collapsed"
   // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
   private void initComponents() {
     java.awt.GridBagConstraints gridBagConstraints;
@@ -530,6 +535,11 @@ public class SignPdfForm extends javax.swing.JFrame implements SignResultListene
     cbKeystoreType.setModel(new javax.swing.DefaultComboBoxModel(new String[] { "PKCS#12", "JKS" }));
     cbKeystoreType.setMinimumSize(new java.awt.Dimension(150, 20));
     cbKeystoreType.setPreferredSize(new java.awt.Dimension(150, 20));
+    cbKeystoreType.addActionListener(new java.awt.event.ActionListener() {
+      public void actionPerformed(java.awt.event.ActionEvent evt) {
+        cbKeystoreTypeActionPerformed(evt);
+      }
+    });
     gridBagConstraints = new java.awt.GridBagConstraints();
     gridBagConstraints.gridx = 1;
     gridBagConstraints.gridy = 0;
@@ -990,7 +1000,7 @@ public class SignPdfForm extends javax.swing.JFrame implements SignResultListene
   }// GEN-LAST:event_btnVisibleSigSettingsActionPerformed
 
   private void chkbVisibleSigActionPerformed(java.awt.event.ActionEvent evt) {// GEN-FIRST:event_chkbVisibleSigActionPerformed
-    switchVisibleSignature(chkbVisibleSig.isSelected());
+    refreshView();
   }// GEN-LAST:event_chkbVisibleSigActionPerformed
 
   private void btnRightsOKActionPerformed(java.awt.event.ActionEvent evt) {// GEN-FIRST:event_btnRightsOKActionPerformed
@@ -1011,13 +1021,12 @@ public class SignPdfForm extends javax.swing.JFrame implements SignResultListene
   }// GEN-LAST:event_btnLoadAliasesActionPerformed
 
   private void chkbPdfEncryptedActionPerformed(java.awt.event.ActionEvent evt) {// GEN-FIRST:event_chkbPdfEncryptedActionPerformed
-    switchEncryptedPdf(chkbPdfEncrypted.isSelected());
+    refreshView();
     pack();
   }// GEN-LAST:event_chkbPdfEncryptedActionPerformed
 
   private void chkbAdvancedActionPerformed(java.awt.event.ActionEvent evt) {// GEN-FIRST:event_chkbAdvancedActionPerformed
-    switchAdvancedView(chkbAdvanced.isSelected());
-    switchEncryptedPdf(chkbPdfEncrypted.isSelected());
+    refreshView();
     pack();
   }// GEN-LAST:event_chkbAdvancedActionPerformed
 
@@ -1136,8 +1145,12 @@ public class SignPdfForm extends javax.swing.JFrame implements SignResultListene
 
   private void btnOutPdfFileActionPerformed(java.awt.event.ActionEvent evt) {// GEN-FIRST:event_btnOutPdfFileActionPerformed
     showFileChooser(tfOutPdfFile, SignerFileChooser.FILEFILTER_PDF, JFileChooser.SAVE_DIALOG);
-
   }// GEN-LAST:event_btnOutPdfFileActionPerformed
+
+  private void cbKeystoreTypeActionPerformed(java.awt.event.ActionEvent evt) {// GEN-FIRST:event_cbKeystoreTypeActionPerformed
+    refreshView();
+    pack();
+  }// GEN-LAST:event_cbKeystoreTypeActionPerformed
 
   private void btnInPdfFileActionPerformed(java.awt.event.ActionEvent evt) {// GEN-FIRST:event_btnInPdfFileActionPerformed
     showFileChooser(tfInPdfFile, SignerFileChooser.FILEFILTER_PDF, JFileChooser.OPEN_DIALOG);
